# elf_analysis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dump.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
app/: CMakeLists.txt  elf_analysis.cpp  elf_analysis.h  interface.cpp  main.cpp
include/: arm_thumb_bl.h  disassembler.h  elf_file_loader.h  find_pc.h  line_table.h  read_file.h
include/dwarf/: leb128.h
include/dwarf/debug_line/: header.h  state_machine.h  state_machine_register.h
scripts/: build_debug.sh  build_debug_emcc.sh  clean.sh  cmake_configure.sh  cmake_configure_emcc.sh  cmake_configure_emscripten.sh  run.sh  run_emcc.sh  show_assembly.sh  test.sh  test_emcc.sh
source/: find_pc.cpp
source/dwarf/debug_line/: header.cpp  state_machine.cpp
test/: CMakeLists.txt  NucleoProject.elf  sample_application.js  test_arm_thumb_bl.cpp
